style.css
*{
    background-color: black;
    color:azure;
}

header{
    display:flex;
    justify-content: space-between; 
    min-height: 5vh;
    box-shadow: 0px 0px 10px 0px #ee5f06e6;
    align-items: center;
    font-size: 20px;

}
header img{
    margin: 10px;
    padding: 10px;
}
nav{
    gap:70px;
    display:flex;
    padding:10px;
}
nav a{
    text-decoration: none;
    color: azure;
    hover
}

.event-selector{
    display:flex;
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
    flex-direction: row;
}
.event button{
    border:#ee5f06e6;
    border-radius: 5px;
    padding: 20px;
    align-items: center;
    background-color: #ee5f06e6;
    justify-content: center;

}
.browse-events{
    display:flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
 
header{
    display:flex;
    justify-content: space-between; 
    min-height: 5vh;
    box-shadow: 0px 0px 10px 0px #ee5f06e6;
    align-items: center;
    font-size: 20px;

}
header img{
    margin: 10px;
    padding: 10px;
}nav{
    gap:70px;
    display:flex;
    padding:10px;
}
nav a{
    text-decoration: none;
    color: azure;
    hover
}


.event-selector{
    display:flex;
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
    flex-direction: row;
}
.event button{
    border:#ee5f06e6;
    border-radius: 5px;
    padding: 20px;
    align-items: center;
    background-color: #ee5f06e6;
    justify-content: center;

}

